--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Welcome to pwupy.com!</h1>
-Happy Birthday Little Ham
+    <h2>Happy Birthday Little Ham</h2>
     <img src="fairy1.png">
   </body>
 </html>
