--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
          <h3>I like puppies!!!</h3>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgJJe8_Zxk6vpX3P1ZLqBV4At3rcQQZzPdgA&usqp=CAU">
   <h4>I want this toy cat for my birthday.</h4>
+  <img src="https://www.amazon.com/Aurora-Miyoni-Orange-Tabby-Cat/dp/B083FM7GBW/ref=sr_1_41?dchild=1&keywords=cat+stuffed+orange&qid=1618108568&sr=8-41">
   </body>
 </html>
