--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ it became covered in dirt. It thought it could wash itself off, so it bathed in 
 <p>
 I made a cool game.
 It's called <a href="candycatch.html">Candy Catch</a>!
+This is my other story
+<a href="story1.html">My Story</a>!
 </p>
 
 <h2>MY PICTURE GALLERY</h2>
